added xgb benchmark model, ran some simulations using different feature sets

--- a/catboost_ex.ipynb
+++ b/catboost_ex.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +65,7 @@
     "    \n",
     "    model_directory = {\n",
     "        'catboost': CatBoostClassifier(iterations=1000, depth=6, learning_rate=0.1, loss_function='Logloss', verbose=200),\n",
+    "        'xgb': XGBClassifier(enable_categorical=True),\n",
     "        'lr': LogisticRegression()\n",
     "    }\n",
     "\n",
@@ -631,6 +632,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xgboost==2.1.4\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip freeze | grep xgb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = XGBClassifier(enable_categorical=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 116,
    "metadata": {},
    "outputs": [
@@ -1119,132 +1147,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0:\tlearn: 0.6904102\ttotal: 2.31ms\tremaining: 2.31s\n",
-      "200:\tlearn: 0.5464576\ttotal: 307ms\tremaining: 1.22s\n",
-      "400:\tlearn: 0.4717603\ttotal: 561ms\tremaining: 838ms\n",
-      "600:\tlearn: 0.4207330\ttotal: 809ms\tremaining: 537ms\n",
-      "800:\tlearn: 0.3827006\ttotal: 1.06s\tremaining: 263ms\n",
-      "999:\tlearn: 0.3544652\ttotal: 1.31s\tremaining: 0us\n",
-      "0:\tlearn: 0.6904886\ttotal: 1.18ms\tremaining: 1.18s\n",
-      "200:\tlearn: 0.5402408\ttotal: 248ms\tremaining: 985ms\n",
-      "400:\tlearn: 0.4633128\ttotal: 493ms\tremaining: 736ms\n",
-      "600:\tlearn: 0.4119483\ttotal: 740ms\tremaining: 491ms\n",
-      "800:\tlearn: 0.3751349\ttotal: 986ms\tremaining: 245ms\n",
-      "999:\tlearn: 0.3463727\ttotal: 1.23s\tremaining: 0us\n",
-      "0:\tlearn: 0.6917845\ttotal: 1.09ms\tremaining: 1.09s\n",
-      "200:\tlearn: 0.5551773\ttotal: 245ms\tremaining: 972ms\n",
-      "400:\tlearn: 0.4852135\ttotal: 488ms\tremaining: 729ms\n",
-      "600:\tlearn: 0.4375507\ttotal: 732ms\tremaining: 486ms\n",
-      "800:\tlearn: 0.4026397\ttotal: 978ms\tremaining: 243ms\n",
-      "999:\tlearn: 0.3725027\ttotal: 1.22s\tremaining: 0us\n",
-      "0:\tlearn: 0.6904680\ttotal: 1.84ms\tremaining: 1.84s\n",
-      "200:\tlearn: 0.5518918\ttotal: 250ms\tremaining: 993ms\n",
-      "400:\tlearn: 0.4818698\ttotal: 493ms\tremaining: 737ms\n",
-      "600:\tlearn: 0.4352374\ttotal: 737ms\tremaining: 490ms\n",
-      "800:\tlearn: 0.3992370\ttotal: 980ms\tremaining: 243ms\n",
-      "999:\tlearn: 0.3708904\ttotal: 1.22s\tremaining: 0us\n",
-      "0:\tlearn: 0.6916566\ttotal: 2.38ms\tremaining: 2.38s\n",
-      "200:\tlearn: 0.5589841\ttotal: 306ms\tremaining: 1.21s\n",
-      "400:\tlearn: 0.4876869\ttotal: 614ms\tremaining: 917ms\n",
-      "600:\tlearn: 0.4395779\ttotal: 919ms\tremaining: 610ms\n",
-      "800:\tlearn: 0.4034880\ttotal: 1.23s\tremaining: 305ms\n",
-      "999:\tlearn: 0.3742056\ttotal: 1.53s\tremaining: 0us\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'model_name': 'catboost',\n",
-       " 'model': <catboost.core.CatBoostClassifier at 0x3170d5c10>,\n",
-       " 'auc': 0.6956003039278975,\n",
-       " 'accuracy': 0.6527899824253076,\n",
-       " 'brier_score': 0.22973824147468086}"
+       "{'model_name': 'xgb',\n",
+       " 'model': XGBClassifier(base_score=None, booster=None, callbacks=None,\n",
+       "               colsample_bylevel=None, colsample_bynode=None,\n",
+       "               colsample_bytree=None, device=None, early_stopping_rounds=None,\n",
+       "               enable_categorical=True, eval_metric=None, feature_types=None,\n",
+       "               gamma=None, grow_policy=None, importance_type=None,\n",
+       "               interaction_constraints=None, learning_rate=None, max_bin=None,\n",
+       "               max_cat_threshold=None, max_cat_to_onehot=None,\n",
+       "               max_delta_step=None, max_depth=None, max_leaves=None,\n",
+       "               min_child_weight=None, missing=nan, monotone_constraints=None,\n",
+       "               multi_strategy=None, n_estimators=None, n_jobs=None,\n",
+       "               num_parallel_tree=None, random_state=None, ...),\n",
+       " 'auc': 0.7495159430876481,\n",
+       " 'accuracy': 0.6823374340949033,\n",
+       " 'brier_score': 0.20666266601099076}"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bracketology(dataset=test_master, feature_set=['WTeamID', 'LTeamID', 'ppg'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Driver code"
+    "bracketology(dataset=test_master, feature_set=['WTeamID', 'LTeamID'], model_name='xgb')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0:\tlearn: 0.6924851\ttotal: 1.67ms\tremaining: 1.67s\n",
-      "200:\tlearn: 0.5401447\ttotal: 205ms\tremaining: 816ms\n",
-      "400:\tlearn: 0.4512124\ttotal: 368ms\tremaining: 549ms\n",
-      "600:\tlearn: 0.3866578\ttotal: 527ms\tremaining: 350ms\n",
-      "800:\tlearn: 0.3416352\ttotal: 685ms\tremaining: 170ms\n",
-      "999:\tlearn: 0.3024140\ttotal: 844ms\tremaining: 0us\n",
-      "0:\tlearn: 0.6924321\ttotal: 812us\tremaining: 812ms\n",
-      "200:\tlearn: 0.5345464\ttotal: 159ms\tremaining: 631ms\n",
-      "400:\tlearn: 0.4457989\ttotal: 319ms\tremaining: 477ms\n",
-      "600:\tlearn: 0.3845183\ttotal: 477ms\tremaining: 317ms\n",
-      "800:\tlearn: 0.3350167\ttotal: 634ms\tremaining: 158ms\n",
-      "999:\tlearn: 0.2976283\ttotal: 790ms\tremaining: 0us\n",
-      "0:\tlearn: 0.6921007\ttotal: 708us\tremaining: 708ms\n",
-      "200:\tlearn: 0.5515049\ttotal: 155ms\tremaining: 615ms\n",
-      "400:\tlearn: 0.4610932\ttotal: 315ms\tremaining: 470ms\n",
-      "600:\tlearn: 0.4005175\ttotal: 471ms\tremaining: 313ms\n",
-      "800:\tlearn: 0.3521907\ttotal: 628ms\tremaining: 156ms\n",
-      "999:\tlearn: 0.3132305\ttotal: 783ms\tremaining: 0us\n",
-      "0:\tlearn: 0.6922426\ttotal: 647us\tremaining: 646ms\n",
-      "200:\tlearn: 0.5508886\ttotal: 153ms\tremaining: 608ms\n",
-      "400:\tlearn: 0.4651558\ttotal: 312ms\tremaining: 467ms\n",
-      "600:\tlearn: 0.4050201\ttotal: 470ms\tremaining: 312ms\n",
-      "800:\tlearn: 0.3610853\ttotal: 625ms\tremaining: 155ms\n",
-      "999:\tlearn: 0.3252524\ttotal: 784ms\tremaining: 0us\n",
-      "0:\tlearn: 0.6916440\ttotal: 944us\tremaining: 944ms\n",
-      "200:\tlearn: 0.5591028\ttotal: 191ms\tremaining: 758ms\n",
-      "400:\tlearn: 0.4783332\ttotal: 382ms\tremaining: 571ms\n",
-      "600:\tlearn: 0.4217551\ttotal: 575ms\tremaining: 382ms\n",
-      "800:\tlearn: 0.3779457\ttotal: 765ms\tremaining: 190ms\n",
-      "999:\tlearn: 0.3425707\ttotal: 955ms\tremaining: 0us\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'model_name': 'catboost',\n",
-       " 'model': <catboost.core.CatBoostClassifier at 0x349992ad0>,\n",
-       " 'auc': 0.6571591389945052,\n",
-       " 'accuracy': 0.6166520210896309,\n",
-       " 'brier_score': 0.25390726854978035}"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "feats = ['WTeamID', 'LTeamID']\n",
-    "feats.extend(['NumOT', 'Season'])\n",
-    "bracketology(dataset=master_df, feature_set=feats)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
