beginning to build scoring pipeline for benchmark predictions

--- a/catboost_ex.ipynb
+++ b/catboost_ex.ipynb
@@ -1078,105 +1078,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 150,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Season                      2021\n",
-       "DayNum                       138\n",
-       "WTeamID                     1101\n",
-       "WScore                        53\n",
-       "WTeamName            Abilene Chr\n",
-       "WFirstD1Season            2014.0\n",
-       "WLastD1Season             2025.0\n",
-       "LTeamID                     1400\n",
-       "LScore                        52\n",
-       "LTeamName                  Texas\n",
-       "LFirstD1Season            1985.0\n",
-       "LLastD1Season             2025.0\n",
-       "NumOT                          0\n",
-       "WFGM                          20\n",
-       "WFGA                          67\n",
-       "WFGM3                          3\n",
-       "WFGA3                         18\n",
-       "WFTM                          10\n",
-       "WFTA                          12\n",
-       "WOR                           13\n",
-       "WDR                           17\n",
-       "WAst                           9\n",
-       "WTO                            9\n",
-       "WStl                          11\n",
-       "WBlk                           0\n",
-       "WPF                           15\n",
-       "LFGM                          18\n",
-       "LFGA                          40\n",
-       "LFGM3                          7\n",
-       "LFGA3                         20\n",
-       "LFTM                           9\n",
-       "LFTA                          11\n",
-       "LOR                            5\n",
-       "LDR                           25\n",
-       "LAst                          15\n",
-       "LTO                           22\n",
-       "LStl                           6\n",
-       "LBlk                           9\n",
-       "LPF                           16\n",
-       "result                         1\n",
-       "TeamID                      1101\n",
-       "TeamName             Abilene Chr\n",
-       "alltime_W                      1\n",
-       "alltime_L                      2\n",
-       "total_pts                    144\n",
-       "ppg                         48.0\n",
-       "longest_run                  1.0\n",
-       "shortest_run                   1\n",
-       "count_yrs_tourney              2\n",
-       "Name: 0, dtype: object"
-      ]
-     },
-     "execution_count": 88,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "test_master.iloc[0]"
+    "feature_set = ['WTeamID', 'LTeamID', 'WFirstD1Season', 'LFirstD1Season', 'Season', 'NumOT']\n",
+    "default = bracketology(dataset=test_master, feature_set=feature_set, model_name='xgb')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'model_name': 'xgb',\n",
-       " 'model': XGBClassifier(base_score=None, booster=None, callbacks=None,\n",
-       "               colsample_bylevel=None, colsample_bynode=None,\n",
-       "               colsample_bytree=None, device=None, early_stopping_rounds=None,\n",
-       "               enable_categorical=True, eval_metric=None, feature_types=None,\n",
-       "               gamma=None, grow_policy=None, importance_type=None,\n",
-       "               interaction_constraints=None, learning_rate=None, max_bin=None,\n",
-       "               max_cat_threshold=None, max_cat_to_onehot=None,\n",
-       "               max_delta_step=None, max_depth=None, max_leaves=None,\n",
-       "               min_child_weight=None, missing=nan, monotone_constraints=None,\n",
-       "               multi_strategy=None, n_estimators=None, n_jobs=None,\n",
-       "               num_parallel_tree=None, random_state=None, ...),\n",
-       " 'auc': 0.7495159430876481,\n",
-       " 'accuracy': 0.6823374340949033,\n",
-       " 'brier_score': 0.20666266601099076}"
+       "493"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bracketology(dataset=test_master, feature_set=['WTeamID', 'LTeamID'], model_name='xgb')"
+    "len(unique_teams)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_to_save = default['model']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "''.startswith('L')"
    ]
   },
   {
@@ -1184,7 +1140,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def forecast(model, unique_teams=unique_teams, master_df=master_df, feature_set=feature_set):\n",
+    "    \n",
+    "    matchups = list(combinations(unique_teams, 2))\n",
+    "    \n",
+    "    for matchup in matchups:\n",
+    "        \n",
+    "        X_predict = []\n",
+    "\n",
+    "        left_team = min(matchup)\n",
+    "        right_team = max(matchup)\n",
+    "        year = 2025\n",
+    "\n",
+    "        left_df = master_df[master_df['LTeamID'] == left_team]\n",
+    "        right_df = master_df[master_df['LTeamID'] == right_team]\n",
+    "\n",
+    "        chiral_features = [i for i in feature_set if i.startswith('W') or i.startswith('L')]\n",
+    "        agg_features = np.setdiff1d(feature_set, chiral_features)\n",
+    "        \n",
+    "        # go left than right\n",
+    "        for feaure in feature_set:\n",
+    "            pass\n",
+    "        \n",
+    "        formatted_matchup = f\"2025_{left_team}_{right_team}\"\n",
+    "        prediction = ..."
+   ]
   },
   {
    "cell_type": "markdown",
